--- a/views/date.erb
+++ b/views/date.erb
@@ -3,6 +3,7 @@
     <head></head>
 
     <body>
-      <h1><%=Time.now%></h1>
+      <%time = Time.now%>
+      <h1><%= "The date is #{time}"%></h1>
     </body>
   </html>
