--- a/views/date.erb
+++ b/views/date.erb
@@ -3,7 +3,7 @@
     <head></head>
 
     <body>
-      <%time = Time.now%>
-      <h1><%= "The date is #{time}"%></h1>
+      <%date = Date.now%>
+      <h1><%= "The date is #{date}"%></h1>
     </body>
   </html>
