Automatically backed up by Learn

--- a/views/date.erb
+++ b/views/date.erb
@@ -3,7 +3,7 @@
     <head></head>
 
     <body>
-      <%date_now = Date.now%>
-      <h1><%= "The date is #{date_now}"%></h1>
+      <%date = Time.now%>
+      <h1><%= "The date is #{date}"%></h1>
     </body>
   </html>
