Automatically backed up by Learn

--- a/views/date.erb
+++ b/views/date.erb
@@ -3,7 +3,7 @@
     <head></head>
 
     <body>
-      <%date = Time.now%>
+      <%date = Date.today.strftime("%A, %B %d, %Y")%>
       <h1><%= "The date is #{date}"%></h1>
     </body>
   </html>
